made the button style fittes all the buttons

--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -758,7 +758,7 @@ classes that adds makes the signup text position in the center and adds some sty
 
 #addSelect:hover{color:black;}
 
-.form .btn-style {
+ .btn-style {
     border: none;
     font-size: 14px;
     font-weight: 600;
