the dashboard is done

--- a/includes/css/searchResults.css
+++ b/includes/css/searchResults.css
@@ -26,3 +26,28 @@ i.fa-angle-right{
   top: -114px;
   right: 18px;
 }
+
+.dashborad-content-inner{
+  box-shadow: 0 2px 15px 5px rgba(0,0,0,.2);
+  display: inline-block;
+  font-weight: bold;
+  text-align: center;
+  width: 30%;
+  margin: 10px;
+  padding: 10px 0;
+}
+.dashborad-link{
+  box-shadow: 0 2px 15px 5px rgba(0,0,0,.2);
+  transition: all 0.3s;
+  display: inline-block;
+  text-align: center;
+  width: 30%;
+  margin: 10px;
+  padding: 10px 0;
+}
+.dashborad-link h3{
+  font-weight: 500;
+}
+.dashborad-link:hover{
+  background: #f72d57;
+}
