--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -162,6 +162,10 @@ header {
     align-items: center;
 }
 
+.navbar-brand a {
+    text-decoration: none;
+}
+
 .navbar-brand h1 {
     font-size: 40px;
     color: #f72d57;
@@ -409,13 +413,17 @@ footer .social-menu ul li:nth-child(5) a:hover i {
     display: inline-block;
 }
 
-.card-footer > button {
+.card-footer > button, .card-footer > a {
     float: right;
     padding: 5px 24px;
     border: none;
     background-color: #f72d57;
     color: #ffffff;
     cursor: pointer;
+}
+
+.card-footer > a {
+    text-decoration: none;
 }
 
 .card-footer .price {
@@ -623,20 +631,18 @@ section:first-child {
     padding: 0;
 }
 
-.order-content .order-content.collapsible {
+.order-item .collapsible {
     float: right;
     margin-right: 20px;
     margin-top: 20px;
     background-color: transparent;
     border: none;
 }
-.order-content .collapsible:after {
+.order-item .collapsible:after {
     content: '\02795'; /* Unicode character for "plus" sign (+) */
 }
   
-
- .order-item .active:after {
-
+.order-content .collapsible.active:after {
     content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
 
@@ -655,88 +661,6 @@ th, td {
     padding: 15px;
     font-weight: normal;
 }
-
-/* Slideshow container */
-.slideshow-container {
-    max-width: 100%;
-    position: relative;
-    margin: auto;
-  }
-  .mySlides{
-      margin-bottom: 10px;
-  }
-
-  .slideshow-container img {vertical-align: middle; height: 300px; width: 100%}
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    background-color: rgba(0,0,0,0.3);
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  
-
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  .dots{
-      text-align: center;
-  }
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
-  }
 
 @media (max-width: 1199px) {
     .side-pane-content {
@@ -803,10 +727,6 @@ th, td {
 
 /***************** Forms and sidebars ********************/
 /*
-
-
-
-
 /*
 some styling to the ul that removes the bullets,margin and adds padding
 */
@@ -1057,3 +977,85 @@ classes that adds makes the signup text position in the center and adds some sty
 .nav-button .num {
     color: red
 }
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+  }
+  .mySlides{
+      margin-bottom: 10px;
+  }
+
+  .slideshow-container img {vertical-align: middle; height: 300px; width: 100%}
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    background-color: rgba(0,0,0,0.3);
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  
+
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  .dots{
+      text-align: center;
+  }
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
+  }
